# steganodf

./: .gitignore  LICENSE  Makefile  README.md  Untitled.ipynb  benchmark.ipynb  build_site.sh  demo.html  index.html  main.py  pyproject.toml  pyscript.json  steganodf-0.2.0-py2.py3-none-any.whl  steganodf-0.2.1-py2.py3-none-any.whl  steganodf-0.2.3-py2.py3-none-any.whl  steganodf-0.2.4-py2.py3-none-any.whl  steganodf-0.2.5-py2.py3-none-any.whl  steganodf-0.3.0-py2.py3-none-any.whl  steganodf_bin.py
.github/workflows/: deploy.yml  website.yml
.ipynb_checkpoints/: benchmark-checkpoint.ipynb
.virtual_documents/: benchmark.ipynb
examples/: iris.watermark.csv  simple.csv
paper/: paper.md
steganodf/: __init__.py  __main__.py  commons.py  steganodf.py
steganodf/algorithms/: __init__.py  algorithm.py  alteration_algorithm.py  bitchunk.py  bitpool.py  permutation_algorithm.py
steganodf/lt/: __init__.py  sampler.py
steganodf/lt/decode/: __init__.py
steganodf/lt/encode/: __init__.py
steganodf/methods/: BitByLine.py  __init__.py  bytesplit.py  dumb.py
tests/: conftest.py  test_bitpool.py  test_cli.py  test_steganodf.py  utils.py
www/: demo.html  index.html  main.py  pyscript.json
