[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "steganodf"
version = "0.2.0"
description = "A library for hiding a secret message on tabulated data" 
# readme = "README.md"
dependencies = [
  "polars",
  "reedsolo"
]
authors = [
  {name="Sacha Schutz", email="sacha.schutz@pm.me"}
]

[project.optional-dependencies]
dev= ["pytest", "numpy", "twine", "build", "pandas", "pyarrow"]
