[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "steganodf"
version = "0.2.1"
description = "A library for hiding a secret message on tabulated data" 
readme = "README.md"

license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English", 
  "Topic :: Security :: Cryptography", 
  "Topic :: Scientific/Engineering :: Information Analysis"
]

dependencies = [
  "polars",
  "reedsolo"
]
authors = [
  {name="Sacha Schutz", email="sacha.schutz@pm.me"}
]

[project.optional-dependencies]
dev= ["pytest", "numpy", "twine", "build", "pandas", "pyarrow"]
