[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "steganodf"
version = "0.2.5"
description = "A library for hiding a secret message on tabulated data" 
readme = "README.md"

license = "AGPL-3.0"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: AGPL-3.0 License",
  "Natural Language :: English", 
  "Topic :: Security :: Cryptography", 
  "Topic :: Scientific/Engineering :: Information Analysis"
]

dependencies = [
  "polars",
  "reedsolo"
]
authors = [
  {name="Sacha Schutz", email="sacha.schutz@pm.me"}
]

[project.optional-dependencies]
dev= ["pytest", "numpy", "twine", "build", "pandas", "pyarrow"]
